<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<RelativeLayout
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/sideText3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:singleLine="true"
				android:rotation="-90"
				android:onClick="regEWFlisteners"
				android:textStyle="italic"
				android:textSize="@dimen/sideFontSize"
				android:textColor="@color/appBlue"
				android:text="@string/title_section3" />

		</RelativeLayout>

		<RelativeLayout
			android:layout_weight="2"
			android:layout_width="0dp"
			android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
			android:gravity="center_vertical">

			<CheckBox
				android:id="@+id/endsAnything"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:text="@string/anything"
                android:textSize="@dimen/fontSize"
				android:checked="true"
				android:onClick="onEWFCheckboxClicked" />

			<CheckBox
				android:id="@+id/endsText1CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_below="@id/endsAnything"
				android:text="@string/empty"
                android:textSize="@dimen/fontSize"
				android:onClick="onEWFCheckboxClicked" />

				<EditText
					android:id="@+id/endsText1"
					android:layout_toRightOf="@id/endsText1CheckBox"
					android:layout_alignBaseline="@id/endsText1CheckBox"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/fontSize"
                    android:textStyle="italic"
                    android:textColor="@color/inputColor"
                    android:hint="@string/endsText"
					android:onClick="regEWFlisteners" />

			<CheckBox
				android:id="@+id/endsText2CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_below="@id/endsText1CheckBox"
                android:textSize="@dimen/fontSize"
				android:text="@string/OR"
				android:onClick="onEWFCheckboxClicked" />

				<EditText
					android:id="@+id/endsText2"
					android:layout_toRightOf="@id/endsText2CheckBox"
					android:layout_alignBaseline="@id/endsText2CheckBox"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/fontSize"
                    android:textStyle="italic"
                    android:textColor="@color/inputColor"
					android:hint="@string/endsText"
					android:onClick="regEWFlisteners" />

			<CheckBox
				android:id="@+id/endsText3CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_below="@id/endsText2CheckBox"
				android:text="@string/OR"
                android:textSize="@dimen/fontSize"
				android:onClick="onEWFCheckboxClicked" />

				<EditText
					android:id="@+id/endsText3"
					android:layout_toRightOf="@id/endsText3CheckBox"
					android:layout_alignBaseline="@id/endsText3CheckBox"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/fontSize"
                    android:textStyle="italic"
                    android:textColor="@color/inputColor"
					android:hint="@string/endsText"
					android:onClick="regEWFlisteners" />

			<!-- doesnt end with -->
			<CheckBox
				android:id="@+id/notEndsTextCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_below="@id/endsText3CheckBox"
				android:layout_marginTop="18dp"
				android:text="@string/but"
                android:textSize="@dimen/fontSize"
				android:onClick="onEWFCheckboxClicked" />

				<EditText
					android:id="@+id/notEndsText"
					android:layout_toRightOf="@id/notEndsTextCheckBox"
					android:layout_alignBaseline="@id/notEndsTextCheckBox"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/fontSize"
                    android:textStyle="italic"
                    android:textColor="@color/inputColor"
					android:hint="@string/notEndsWithText"
					android:onClick="regEWFlisteners" />

		</RelativeLayout>

	</LinearLayout>

</FrameLayout>

