<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<RelativeLayout
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/sideText2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:singleLine="true"
				android:rotation="-90"
				android:onClick="regCFlisteners"
				android:textStyle="italic"
				android:textSize="@dimen/sideFontSize"
				android:textColor="@color/appBlue"
				android:text="@string/title_section2" />

		</RelativeLayout>

        <RelativeLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical" >

            <CheckBox
                android:id="@+id/contAnything"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anything"
                android:textSize="@dimen/fontSize"
                android:checked="true"
                android:onClick="onCFCheckboxClicked" />

            <CheckBox
                android:id="@+id/containsText1CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contAnything"
                android:text="@string/empty"
                android:textSize="@dimen/fontSize"
                android:onClick="onCFCheckboxClicked" />

                <EditText
                    android:id="@+id/containsText1"
                    android:layout_toRightOf="@id/containsText1CheckBox"
                    android:layout_alignBaseline="@id/containsText1CheckBox"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/hintFontSize"
                    android:textStyle="italic"
                    android:textColor="@color/inputColor"
                    android:hint="@string/containsText"
                    android:onClick="regCFlisteners" />

            <CheckBox
                android:id="@+id/containsText2CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/containsText1CheckBox"
                android:text="@string/OR"
                android:textSize="@dimen/fontSize"
                android:onClick="onCFCheckboxClicked" />

                <EditText
                    android:id="@+id/containsText2"
                    android:layout_toRightOf="@id/containsText2CheckBox"
                    android:layout_alignBaseline="@id/containsText2CheckBox"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/hintFontSize"
                    android:textStyle="italic"
                    android:textColor="@color/inputColor"
                    android:hint="@string/containsText"
                    android:onClick="regCFlisteners"  />

            <CheckBox
                android:id="@+id/containsText3CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/containsText2CheckBox"
                android:text="@string/OR"
                android:textSize="@dimen/fontSize"
                android:onClick="onCFCheckboxClicked" />

                <EditText
                    android:id="@+id/containsText3"
                    android:layout_toRightOf="@id/containsText3CheckBox"
                    android:layout_alignBaseline="@id/containsText3CheckBox"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/hintFontSize"
                    android:textStyle="italic"
                    android:textColor="@color/inputColor"
                    android:hint="@string/containsText"
                    android:onClick="regCFlisteners"  />

            <!-- doesnt contain -->
            <CheckBox
                android:id="@+id/notContainsTextCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/containsText3CheckBox"
                android:layout_marginTop="18dp"
                android:text="@string/but"
                android:textSize="@dimen/fontSize"
                android:onClick="onCFCheckboxClicked" />

                <EditText
                    android:id="@+id/notContainsText"
                    android:layout_toRightOf="@id/notContainsTextCheckBox"
                    android:layout_alignBaseline="@id/notContainsTextCheckBox"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/hintFontSize"
                    android:textStyle="italic"
                    android:textColor="@color/inputColor"
                    android:hint="@string/notContainsText"
                    android:onClick="regCFlisteners"  />

        </RelativeLayout>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="26dp"
		android:layout_gravity="center_horizontal|bottom"
		android:text="@string/swipe"
		android:textSize="13sp"
		android:textStyle="italic"
		android:textColor="@color/appBlue"/>

</FrameLayout>

