<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisplayCheatSheetActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/viewPagerHeight"
        android:background="#fff">

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pager_title_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:padding="@dimen/margin"
            android:background="@color/appBlue"
            android:textColor="#FFF"
            android:textSize="@dimen/titleFontSize" />

    </android.support.v4.view.ViewPager>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/light">

        <RadioGroup
            android:checkedButton="@+id/matchOnWordsRadio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <RadioButton
                android:id="@+id/matchOnWordsRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/marginHalf"
                android:shadowColor="@android:color/white"
                android:textSize="@dimen/hintFontSize"
                android:text="match on words"/>

            <RadioButton
                android:id="@+id/matchOnLinesRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/hintFontSize"
                android:text="match on lines"/>

        </RadioGroup>

    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/appLightBlue"
        android:padding="@dimen/margin" >

        <TextView
            android:id="@+id/regexLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/regexLabel"
            android:textColor="#FFF"
            android:textSize="@dimen/fontSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>

        <TextView
            android:id="@+id/regexText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="260dp"
            android:layout_below="@id/regexLabel"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/marginHalf"
            android:background="@drawable/regex_field"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/regexText"
            android:textColor="#666"
            android:textSize="@dimen/sideFontSize"
            android:textIsSelectable="true"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/regexLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regexText"
            android:layout_margin="@dimen/marginHalf"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/share_icon"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="@dimen/fontSize"
            android:text="@string/shareButton"
            android:onClick="onShareClick"
            app:layout_constraintTop_toBottomOf="@+id/regexText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <Button
            android:id="@+id/cheatSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="@dimen/titleFontSize"
            android:text="@string/regex_cheat_sheet"
            android:onClick="showCheatSheet"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
